--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,26 @@
-h2 {
-  font-weight: 300; }
-  h2 span {
-    font-weight: 600; }
+@font-face {
+  font-family: 'ralewayblack';
+  src: url("../fonts/raleway-black-webfont.woff2") format("woff2"), url("../fonts/raleway-black-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'ralewayregular';
+  src: url("../fonts/raleway-regular-webfont.woff2") format("woff2"), url("../fonts/raleway-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'ralewaysemibold';
+  src: url("../fonts/raleway-semibold-webfont.woff2") format("woff2"), url("../fonts/raleway-semibold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+body {
+  font-family: 'ralewayregular', Arial, sans-serif;
+  font-size: 2.1rem;
+  line-height: 2.8rem; }
+
+h1, h2, h3 {
+  font-family: 'ralewaysemibold', Arial, sans-serif;
+  text-transform: uppercase; }
 
 img {
   max-width: 100%; }
@@ -17,6 +36,9 @@ nav {
     padding: 1.25rem 0 2rem;
     background-color: transparent;
     border: none; }
+    @media (min-width: 992px) {
+      nav .navbar-toggle {
+        display: none; } }
     nav .navbar-toggle span {
       display: block;
       height: .2rem;
@@ -28,8 +50,13 @@ nav {
       width: 2.5rem; }
     nav .navbar-toggle span:nth-child(3) {
       width: 2rem; }
-  nav ul {
+  nav .hamburger-nav {
     display: none; }
+    @media (min-width: 992px) {
+      nav .hamburger-nav {
+        display: block; }
+        nav .hamburger-nav .icon {
+          color: white; } }
 
 header {
   background-color: #1e3145;
