--- a/css/main.css
+++ b/css/main.css
@@ -15,16 +15,29 @@
   font-style: normal; }
 body {
   font-family: 'ralewayregular', Arial, sans-serif;
-  font-size: 2.1rem;
-  line-height: 2.8rem; }
+  font-size: 1.8rem;
+  line-height: 2.2rem; }
 
 h1, h2, h3 {
   font-family: 'ralewaysemibold', Arial, sans-serif;
+  font-size: 2.5rem; }
+
+h2, h3 {
   text-transform: uppercase; }
+
+h2 {
+  margin-bottom: 5rem;
+  text-align: center; }
 
 img {
   max-width: 100%; }
 
+nav.container-full {
+  display: none; }
+
+/*.container, .container-full {
+  position: relative;
+}*/
 nav {
   background-color: #1e3145; }
   nav .navbar-toggle {
@@ -60,16 +73,48 @@ nav {
 
 header {
   background-color: #1e3145;
-  padding: 4rem 0 2rem;
+  padding: 4rem 0;
   margin-bottom: 3rem; }
+  @media (min-width: 992px) {
+    header {
+      position: fixed;
+      z-index: 1;
+      width: 100%;
+      top: 0;
+      background: linear-gradient(to bottom, white 75%, transparent 100%); } }
+  header .container {
+    display: flex; }
+    @media (min-width: 992px) {
+      header .container {
+        justify-content: space-around; } }
+  @media (min-width: 992px) {
+    header ._subheadline {
+      order: 1; }
+    header ._logo {
+      order: 2; }
+    header ._headline {
+      order: 3; } }
   header ._headline, header ._subheadline {
     color: white;
-    font-size: 1.8rem; }
+    font-size: 2.5rem;
+    width: 100%; }
+    @media (min-width: 992px) {
+      header ._headline, header ._subheadline {
+        color: #565656; } }
   header ._subheadline {
     font-weight: 300; }
 
+.-landtagswahlen {
+  padding-top: 20rem; }
+
 .btn {
   color: white;
-  background: #e5007d; }
+  text-transform: uppercase;
+  border-radius: 0;
+  border: none;
+  padding: 1rem;
+  font-size: 1.75rem;
+  margin: 4rem auto;
+  background: linear-gradient(135deg, rgba(77, 176, 225, 0.5) 0%, transparent 100%), #e5007d; }
 
 /*# sourceMappingURL=main.css.map */
