--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,12 +6,19 @@ $text-color: #565656;
 $color-gradient: linear-gradient(135deg, rgba(77,176, 225, .5) 0%, transparent 100%);
 $white-gradient: linear-gradient(to bottom, white 75%,transparent 100%);
 
-$fliestext: 1.8rem;
+$fliestext: 2.1rem;
 $headline: 2.5rem;
 
 $screen-tablet: 768px;
 $screen-laptop: 992px;
 $screen-desktop: 1280px;
+
+body {
+  color: $text-color;
+  font-size: $fliestext;
+  line-height: 2.8rem;
+  font-family: 'ralewayregular', Arial, sans-serif;
+}
 
 @font-face {
     font-family: 'ralewayblack';
@@ -40,12 +47,6 @@ $screen-desktop: 1280px;
 
 }
 
-body {
-	font-family: 'ralewayregular', Arial, sans-serif;
-	font-size: $fliestext;
-	line-height: 2.2rem;
-}
-
 h1, h2, h3 {
 	font-family: 'ralewaysemibold', Arial, sans-serif;
   font-size: $headline;
@@ -67,10 +68,6 @@ img {
 nav.container-full {
   display: none;
 }
-
-/*.container, .container-full {
-  position: relative;
-}*/
 
 nav {
 	background-color: $secondary-color;
@@ -130,8 +127,30 @@ header {
   .container {
     display: flex;
 
+    svg {
+      width:100%;
+
+      .st0, .st1, .st2 {
+        fill: white;
+      }
+    }
+
     @media (min-width: $screen-laptop) {
       justify-content: space-around;
+
+      svg {
+
+        .st0 {
+          fill: $text-color;
+        }
+        .st1 {
+          fill: $highlight-color;
+        }
+        .st2 {
+          fill: $primary-color;
+        }
+      }
+
     }
   }
 
