--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,11 +7,12 @@ $color-gradient: linear-gradient(135deg, rgba(77,176, 225, .5) 0%, transparent 1
 $white-gradient: linear-gradient(to bottom, white 75%,transparent 100%);
 
 $fliestext: 2.1rem;
-$headline: 2.5rem;
+$headline: 3.6rem;
 
 $screen-tablet: 768px;
 $screen-laptop: 992px;
 $screen-desktop: 1280px;
+
 
 body {
   color: $text-color;
@@ -47,12 +48,30 @@ body {
 
 }
 
-h1, h2, h3 {
-	font-family: 'ralewaysemibold', Arial, sans-serif;
+a {
+  color: $highlight-color;
+
+  &:hover, &:focus {
+    color: $primary-color;
+    text-decoration: none;
+  }
+
+
+}
+
+h1 {
+  color: white;
+	font-family: 'ralewayblack', Arial, sans-serif;
   font-size: $headline;
+
+  @media (min-width: $screen-laptop) {
+    color: $text-color;
+  }
 }
 
 h2, h3 {
+  font-size: $headline;
+  font-family: 'ralewaysemibold', Arial, sans-serif;
   text-transform: uppercase;
 }
 
@@ -63,10 +82,6 @@ h2 {
 
 img {
 	max-width: 100%;
-}
-
-nav.container-full {
-  display: none;
 }
 
 nav {
@@ -111,6 +126,11 @@ nav {
 	}
 }
 
+.container-full {
+
+  width: 100%;
+}
+
 header {
 	background-color: $secondary-color;
 	padding: 4rem 0;
@@ -125,10 +145,8 @@ header {
   }
 
   .container {
-    display: flex;
-
     svg {
-      width:100%;
+      width: 100%;
 
       .st0, .st1, .st2 {
         fill: white;
@@ -136,10 +154,8 @@ header {
     }
 
     @media (min-width: $screen-laptop) {
-      justify-content: space-around;
 
       svg {
-
         .st0 {
           fill: $text-color;
         }
@@ -150,38 +166,9 @@ header {
           fill: $primary-color;
         }
       }
-
     }
   }
 
-  @media (min-width: $screen-laptop) {
-    ._subheadline, ._logo, ._headline {
-
-    }
-    ._subheadline {
-      order: 1;
-    }
-    ._logo {
-      order: 2;
-    }
-    ._headline {
-      order: 3;
-    }
-  }
-
-	._headline, ._subheadline {
-		color: white;
-		font-size: 2.5rem;
-    width: 100%;
-
-    @media (min-width: $screen-laptop) {
-      color: $text-color;
-    }
-	}
-
-	._subheadline {
-		font-weight: 300;
-	}
 }
 
 .-landtagswahlen {
@@ -197,4 +184,10 @@ header {
   font-size: 1.75rem;
   margin: 4rem auto;
 	background: $color-gradient, $highlight-color;
+  font-family: 'ralewaysemibold', Arial, sans-serif;
+
+  &:hover {
+    background: darken( $highlight-color, .5% );
+    color: white;
+  }
 }
