--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,10 @@ body {
   color: #565656;
   font-size: 2.1rem;
   line-height: 2.8rem;
-  font-family: 'ralewayregular', Arial, sans-serif; }
+  font-family: 'ralewayregular', Arial, sans-serif;
+  height: 100vh; }
+  body .row {
+    margin: 0; }
 
 @font-face {
   font-family: 'ralewayblack';
@@ -25,10 +28,17 @@ a {
     color: #4db0e1;
     text-decoration: none; }
 
+p {
+  margin-bottom: 25px; }
+
 h1 {
   color: white;
   font-family: 'ralewayblack', Arial, sans-serif;
-  font-size: 3.6rem; }
+  font-size: 2.6rem; }
+  @media (min-width: 768px) {
+    h1 {
+      font-size: 3.6rem;
+      text-align: left; } }
   @media (min-width: 992px) {
     h1 {
       color: #565656; } }
@@ -46,13 +56,13 @@ img {
   max-width: 100%; }
 
 nav {
-  background-color: #1e3145; }
+  background-color: #4db0e1; }
   nav .navbar-toggle {
     position: absolute;
     right: 2rem;
     display: block;
     height: 5rem;
-    width: 5rem;
+    width: 2rem;
     padding: 1.25rem 0 2rem;
     background-color: transparent;
     border: none; }
@@ -82,8 +92,8 @@ nav {
   width: 100%; }
 
 header {
-  background-color: #1e3145;
-  padding: 4rem 0;
+  background-color: #4db0e1;
+  padding: 2rem 0;
   margin-bottom: 3rem; }
   @media (min-width: 992px) {
     header {
@@ -92,20 +102,20 @@ header {
       width: 100%;
       top: 0;
       background: linear-gradient(to bottom, white 75%, transparent 100%); } }
-  header .container svg {
-    width: 100%; }
-    header .container svg .st0, header .container svg .st1, header .container svg .st2 {
+  header svg {
+    width: 35%; }
+    header svg .st0, header svg .st1, header svg .st2 {
       fill: white; }
+  @media (min-width: 768px) {
+    header svg {
+      width: 100%; } }
   @media (min-width: 992px) {
-    header .container svg .st0 {
+    header svg .st0 {
       fill: #565656; }
-    header .container svg .st1 {
+    header svg .st1 {
       fill: #e5007d; }
-    header .container svg .st2 {
+    header svg .st2 {
       fill: #4db0e1; } }
-
-.-landtagswahlen {
-  padding-top: 20rem; }
 
 .btn {
   color: white;
@@ -114,11 +124,14 @@ header {
   border: none;
   padding: 1rem;
   font-size: 1.75rem;
-  margin: 4rem auto;
+  margin: 1rem auto 4rem auto;
   background: linear-gradient(135deg, rgba(77, 176, 225, 0.5) 0%, transparent 100%), #e5007d;
   font-family: 'ralewaysemibold', Arial, sans-serif; }
-  .btn:hover {
-    background: #e2007c;
+  .btn:focus, .btn:hover {
     color: white; }
+  @media (min-width: 992px) {
+    .btn:hover {
+      background: #e2007c;
+      color: white; } }
 
 /*# sourceMappingURL=main.css.map */
