--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@ $white-gradient: linear-gradient(to bottom, white 75%,transparent 100%);
 
 $fliestext: 2.1rem;
 $headline: 3.6rem;
+$headline-mobile: 2.6rem;
 
 $screen-tablet: 768px;
 $screen-laptop: 992px;
@@ -19,6 +20,12 @@ body {
   font-size: $fliestext;
   line-height: 2.8rem;
   font-family: 'ralewayregular', Arial, sans-serif;
+  height: 100vh;
+
+.row {
+  margin: 0;
+}
+
 }
 
 @font-face {
@@ -55,14 +62,21 @@ a {
     color: $primary-color;
     text-decoration: none;
   }
+}
 
-
+p {
+  margin-bottom: 25px;
 }
 
 h1 {
   color: white;
 	font-family: 'ralewayblack', Arial, sans-serif;
-  font-size: $headline;
+  font-size: $headline-mobile;
+
+  @media (min-width: $screen-tablet) {
+    font-size: $headline;
+    text-align: left;
+  }
 
   @media (min-width: $screen-laptop) {
     color: $text-color;
@@ -85,14 +99,14 @@ img {
 }
 
 nav {
-	background-color: $secondary-color;
+	background-color: $primary-color;
 
 	.navbar-toggle {
 		position: absolute;
 		right: 2rem;
 		display: block;
 		height: 5rem;
-		width: 5rem;
+		width: 2rem;
 		padding: 1.25rem 0 2rem;
 		background-color: transparent;
 		border: none;
@@ -127,13 +141,12 @@ nav {
 }
 
 .container-full {
-
   width: 100%;
 }
 
 header {
-	background-color: $secondary-color;
-	padding: 4rem 0;
+	background-color: $primary-color;
+	padding: 2rem 0;
 	margin-bottom: 3rem;
 
   @media (min-width: $screen-laptop) {
@@ -144,17 +157,20 @@ header {
     background: $white-gradient;
   }
 
-  .container {
     svg {
-      width: 100%;
-
+      width: 35%;
       .st0, .st1, .st2 {
         fill: white;
       }
     }
 
-    @media (min-width: $screen-laptop) {
+    @media (min-width: $screen-tablet) {
+      svg {
+        width: 100%;
+      }
+    }
 
+    @media (min-width: $screen-laptop) {
       svg {
         .st0 {
           fill: $text-color;
@@ -167,12 +183,6 @@ header {
         }
       }
     }
-  }
-
-}
-
-.-landtagswahlen {
-  padding-top: 20rem;
 }
 
 .btn {
@@ -182,12 +192,18 @@ header {
   border: none;
   padding: 1rem;
   font-size: 1.75rem;
-  margin: 4rem auto;
+  margin: 1rem auto 4rem auto;
 	background: $color-gradient, $highlight-color;
   font-family: 'ralewaysemibold', Arial, sans-serif;
 
-  &:hover {
-    background: darken( $highlight-color, .5% );
+  &:focus, &:hover {
     color: white;
+  }
+
+  @media (min-width: $screen-laptop) {
+    &:hover {
+      background: darken( $highlight-color, .5% );
+      color: white;
+    }
   }
 }
