--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,14 +18,12 @@ $screen-desktop: 1280px;
 body {
   color: $text-color;
   font-size: $fliestext;
-  line-height: 2.8rem;
+  line-height: 3rem;
   font-family: 'ralewayregular', Arial, sans-serif;
-  height: 100vh;
 
-.row {
-  margin: 0;
-}
-
+  .row {
+    margin: 0;
+  }
 }
 
 @font-face {
@@ -34,7 +32,6 @@ body {
          url('../fonts/raleway-black-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -43,7 +40,6 @@ body {
          url('../fonts/raleway-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -52,7 +48,6 @@ body {
          url('../fonts/raleway-semibold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
 a {
@@ -110,6 +105,7 @@ nav {
 		padding: 1.25rem 0 2rem;
 		background-color: transparent;
 		border: none;
+    z-index: 1;
 
 		@media (min-width: $screen-laptop) {
 			display: none;
@@ -130,6 +126,10 @@ nav {
 	.hamburger-nav {
 		display: none;
 
+    &.visible {
+      display: block;
+    }
+
 		@media (min-width: $screen-laptop) {
 			display: block;
 
@@ -141,7 +141,42 @@ nav {
 }
 
 .container-full {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+
   width: 100%;
+  padding-top: 0;
+
+  svg {
+    display: none;
+  }
+
+
+  @media (min-width: $screen-tablet) {
+
+    svg {
+      display: block;
+
+      .graph1, .graph2 {
+        stroke-width: 2;
+        stroke-miterlimit: 10;
+        fill: none;
+      }
+      .graph1 {
+        stroke: $highlight-color;
+      }
+      .graph2 {
+        stroke: $primary-color;
+      }
+    }
+  }
+
+  @media (min-width: $screen-laptop) {
+    padding-top: 20rem;
+  }
 }
 
 header {
@@ -158,7 +193,7 @@ header {
   }
 
     svg {
-      width: 35%;
+      width: 50%;
       .st0, .st1, .st2 {
         fill: white;
       }
