--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,9 +7,9 @@ $text-color: #565656;
 $color-gradient: linear-gradient(135deg, rgba(77,176, 225, .5) 0%, transparent 100%);
 $white-gradient: linear-gradient(to bottom, white 75%,transparent 100%);
 
-$fliestext: 2.1rem;
-$headline: 3.6rem;
-$navi-font: 2.8rem;
+$fliestext: 1.8rem;
+$headline: 2.6rem;
+$navi-font: 2.5rem;
 $navi-font-desktop: 1.8rem;
 $headline-mobile: 2.6rem;
 
@@ -62,6 +62,7 @@ a {
 
   &:hover, &:focus {
     color: $primary-color;
+    opacity: 1;
     text-decoration: none;
   }
 }
@@ -105,18 +106,30 @@ img {
 
   display: none;
 
+  a {
+    opacity: 1;
+  }
+
 @media (min-width: $screen-laptop) {
 
     background: $navi-color;
-    display: flex;
     float: left;
     width: 18rem;
     height: 100vh;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-y: scroll;
 
     ul {
       list-style: none;
-      flex-direction: column;
+      padding: 0 2rem;
+
+      li {
+        padding: 2rem;
+      }
     }
 
     a {
@@ -124,6 +137,7 @@ img {
       font-family: 'ralewaysemibold', Arial, sans-serif;
       font-size: $navi-font-desktop;
       background: $primary-color;
+
     }
   }
 }
@@ -136,6 +150,7 @@ nav {
     font-family: 'ralewaysemibold', Arial, sans-serif;
     font-size: $navi-font;
     line-height: 9rem;
+    opacity: .5;
   }
 
 	.navbar-toggle {
@@ -173,13 +188,16 @@ nav {
     right: 0;
     top: 0;
     background: $secondary-color;
-    opacity: .9;
     list-style: none;
     z-index: 8;
     text-align: center;
     flex-direction: column;
     justify-content: center;
     padding: 2rem 0;
+
+    .current-mobile {
+      opacity: 1;
+    }
 
     &.visible {
       display: flex;
@@ -252,6 +270,7 @@ header {
     flex-direction: column;
     text-align: center;
     align-items: center;
+    justify-content: center;
 
     .logo {
       order: 1;
@@ -279,7 +298,7 @@ header {
 
     }
     svg {
-      width: 25%;
+      width: 50%;
 
       .st0, .st1, .st2 {
         fill: white;
