--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,9 @@ $screen-tablet: 768px;
 $screen-laptop: 992px;
 $screen-desktop: 1280px;
 
-
+* {
+  padding: 0;
+}
 body {
   color: $text-color;
   font-size: $fliestext;
